outputs/workspace_output_1763440013_2318.txt
  File "/workspace/tests/test_connectivity.py", line 367
    print(f"  - {test}: {traceback.split('AssertionError: ')[-1].split('\\n')[0]}")
                                                                                  ^
SyntaxError: f-string expression part cannot include a backslash
